updated so it compiles

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,10 @@
 default_envs = debug-eth
 
 [firmware]
-name = OXRS-SHA-StateIO-ESP-FW
-short_name = OXRS State IO
-maker = SuperHouse Automation
+name = \"OXRS-SHA-StateIO-ESP32-FW\"
+short_name = \"OXRS State IO\"
+maker = \"SuperHouse Automation\"
+github_url = \"https://github.com/SuperHouse/OXRS-SHA-StateIO-ESP32-FW\"
 
 [env]
 platform = espressif32
@@ -22,6 +23,7 @@ framework = arduino
 board = esp32dev
 lib_deps = 
   adafruit/Adafruit MCP23017 Arduino Library
+	androbi/MqttLogger
 	bodmer/TFT_eSPI
 	https://github.com/OXRS-IO/Ethernet
 	https://github.com/OXRS-IO/OXRS-IO-MQTT-ESP32-LIB
@@ -29,11 +31,11 @@ lib_deps =
 	https://github.com/OXRS-IO/OXRS-IO-LCD-ESP32-LIB
 	https://github.com/OXRS-IO/OXRS-IO-IOHandler-ESP32-LIB
 	https://github.com/SuperHouse/OXRS-SHA-Rack32-ESP32-LIB
-	https://github.com/androbi-com/MqttLogger
 build_flags = 
 	-DFW_NAME="${firmware.name}"
 	-DFW_SHORT_NAME="${firmware.short_name}"
 	-DFW_MAKER="${firmware.maker}"
+	-DFW_GITHUB_URL="${firmware.github_url}"
 	; TFT_eSPI configuration
 	-DUSER_SETUP_LOADED=1
 	-DST7789_2_DRIVER=1
