update to maintain OXRS library compatability

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = debug-eth
+default_envs = rack32-debug
 
 [firmware]
 name = \"OXRS-SHA-StateIO-ESP32-FW\"
@@ -18,26 +18,113 @@ maker = \"SuperHouse Automation\"
 github_url = \"https://github.com/SuperHouse/OXRS-SHA-StateIO-ESP32-FW\"
 
 [env]
-platform = espressif32
 framework = arduino
-board = esp32dev
 lib_deps = 
-  adafruit/Adafruit MCP23017 Arduino Library
+	adafruit/Adafruit MCP23017 Arduino Library
 	androbi/MqttLogger
-	bodmer/TFT_eSPI
-	https://github.com/OXRS-IO/Ethernet
+	knolleary/PubSubClient
 	https://github.com/OXRS-IO/OXRS-IO-MQTT-ESP32-LIB
 	https://github.com/OXRS-IO/OXRS-IO-API-ESP32-LIB
-	https://github.com/OXRS-IO/OXRS-IO-LCD-ESP32-LIB
 	https://github.com/OXRS-IO/OXRS-IO-IOHandler-ESP32-LIB
-	https://github.com/SuperHouse/OXRS-SHA-Rack32-ESP32-LIB
 build_flags = 
 	-DFW_NAME="${firmware.name}"
 	-DFW_SHORT_NAME="${firmware.short_name}"
 	-DFW_MAKER="${firmware.maker}"
 	-DFW_GITHUB_URL="${firmware.github_url}"
+
+; debug builds
+[env:rack32-debug]
+extends = rack32
+build_flags = 
+	${rack32.build_flags}
+	-DFW_VERSION="DEBUG-ETH"
+monitor_speed = 115200
+
+[env:rack32-debug-wifi]
+extends = rack32
+lib_deps = 
+	${rack32.lib_deps}
+	DNSServer
+	WiFi
+	WebServer
+	https://github.com/tzapu/wifiManager
+build_flags = 
+	${rack32.build_flags}
+	-DWIFI_MODE
+	-DFW_VERSION="DEBUG-WIFI"
+monitor_speed = 115200
+
+[env:room8266-debug]
+extends = room8266
+build_flags = 
+	${room8266.build_flags}
+	-DFW_VERSION="DEBUG-ETH"
+monitor_speed = 115200
+
+[env:room8266-debug-wifi]
+extends = room8266
+lib_deps = 
+	${room8266.lib_deps}
+	DNSServer
+	ESP8266WiFi
+	ESP8266WebServer
+	https://github.com/tzapu/wifiManager
+build_flags = 
+	${room8266.build_flags}
+	-DWIFI_MODE
+	-DFW_VERSION="DEBUG-WIFI"
+monitor_speed = 115200
+
+; release builds
+[env:rack32-eth]
+extends = rack32
+extra_scripts = pre:release_extra.py
+
+[env:rack32-wifi]
+extends = rack32
+lib_deps = 
+	${rack32.lib_deps}
+	DNSServer
+	WiFi
+	WebServer
+	https://github.com/tzapu/wifiManager
+build_flags = 
+	${rack32.build_flags}
+	-DWIFI_MODE
+extra_scripts = pre:release_extra.py
+
+[env:room8266-eth]
+extends = room8266
+extra_scripts = pre:release_extra.py
+
+[env:room8266-wifi]
+extends = room8266
+lib_deps = 
+	${room8266.lib_deps}
+	DNSServer
+	ESP8266WiFi
+	ESP8266WebServer
+	https://github.com/tzapu/wifiManager
+build_flags = 
+	${room8266.build_flags}
+	-DWIFI_MODE
+extra_scripts = pre:release_extra.py
+
+[rack32]
+platform = espressif32
+board = esp32dev
+lib_deps = 
+	${env.lib_deps}
+	bodmer/TFT_eSPI
+	https://github.com/OXRS-IO/Ethernet
+	https://github.com/OXRS-IO/OXRS-IO-LCD-ESP32-LIB
+	https://github.com/SuperHouse/OXRS-SHA-Rack32-ESP32-LIB
+build_flags = 
+	${env.build_flags}
+	-DOXRS_RACK32
 	; TFT_eSPI configuration
 	-DUSER_SETUP_LOADED=1
+	-DDISABLE_ALL_LIBRARY_WARNINGS=1
 	-DST7789_2_DRIVER=1
 	-DTFT_RGB_ORDER=TFT_RGB
 	-DTFT_WIDTH=240
@@ -53,32 +140,13 @@ build_flags =
 	-DLOAD_FONT2=1 	; Font 2. Small 16 pixel high font, needs ~3534 bytes in FLASH, 96 characters
 	-DLOAD_GFXFF=1  ; FreeFonts. Include access to the 48 Adafruit_GFX free fonts FF1 to FF48 and custom fonts
 
-; debug builds
-[env:debug-eth]
-build_flags = 
-	${env.build_flags}
-	-DFW_VERSION="DEBUG"
-monitor_speed = 115200
-
-[env:debug-wifi]
+[room8266]
+platform = espressif8266
+board = esp12e
 lib_deps = 
 	${env.lib_deps}
-	https://github.com/tzapu/wifiManager
+	https://github.com/OXRS-IO/Ethernet
+	https://github.com/austinscreations/OXRS-AC-Room8266-ESP8266-LIB
 build_flags = 
 	${env.build_flags}
-	-DFW_VERSION="DEBUG"
-	-DWIFI_MODE
-monitor_speed = 115200
-
-; release builds
-[env:rack32-eth]
-extra_scripts = pre:release_extra.py
-
-[env:rack32-wifi]
-lib_deps = 
-	${env.lib_deps}
-	https://github.com/tzapu/wifiManager
-build_flags = 
-	${env.build_flags}
-	-DWIFI_MODE
-extra_scripts = pre:release_extra.py
+	-DOXRS_ROOM8266
