--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 default_envs = rack32-debug
 
 [firmware]
-name = \"OXRS-SHA-StateIO-ESP32-FW\"
+name_room8266 = \"OXRS-SHA-StateIO-ESP8266-FW\"
+name_rack32 = \"OXRS-SHA-StateIO-ESP32-FW\"
 short_name = \"OXRS State IO\"
 maker = \"SuperHouse Automation\"
 github_url = \"https://github.com/SuperHouse/OXRS-SHA-StateIO-ESP32-FW\"
@@ -27,7 +28,7 @@ lib_deps =
 	https://github.com/OXRS-IO/OXRS-IO-API-ESP32-LIB
 	https://github.com/OXRS-IO/OXRS-IO-IOHandler-ESP32-LIB
 build_flags = 
-	-DFW_NAME="${firmware.name}"
+  ;	-DFW_NAME   set by debug/release_extra.py
 	-DFW_SHORT_NAME="${firmware.short_name}"
 	-DFW_MAKER="${firmware.maker}"
 	-DFW_GITHUB_URL="${firmware.github_url}"
@@ -39,6 +40,8 @@ build_flags =
 	${rack32.build_flags}
 	-DFW_VERSION="DEBUG-ETH"
 monitor_speed = 115200
+extra_scripts = 
+  pre:debug_extra.py
 
 [env:rack32-debug-wifi]
 extends = rack32
@@ -53,6 +56,8 @@ build_flags =
 	-DWIFI_MODE
 	-DFW_VERSION="DEBUG-WIFI"
 monitor_speed = 115200
+extra_scripts = 
+  pre:debug_extra.py
 
 [env:room8266-debug]
 extends = room8266
@@ -60,6 +65,8 @@ build_flags =
 	${room8266.build_flags}
 	-DFW_VERSION="DEBUG-ETH"
 monitor_speed = 115200
+extra_scripts = 
+  pre:debug_extra.py
 
 [env:room8266-debug-wifi]
 extends = room8266
@@ -74,11 +81,15 @@ build_flags =
 	-DWIFI_MODE
 	-DFW_VERSION="DEBUG-WIFI"
 monitor_speed = 115200
+extra_scripts = 
+  pre:debug_extra.py
 
 ; release builds
 [env:rack32-eth]
 extends = rack32
-extra_scripts = pre:release_extra.py
+extra_scripts = 
+  pre:release_extra.py
+  pre:rack32_extra.py
 
 [env:rack32-wifi]
 extends = rack32
@@ -91,11 +102,15 @@ lib_deps =
 build_flags = 
 	${rack32.build_flags}
 	-DWIFI_MODE
-extra_scripts = pre:release_extra.py
+extra_scripts = 
+  pre:release_extra.py
+  pre:rack32_extra.py
 
 [env:room8266-eth]
 extends = room8266
-extra_scripts = pre:release_extra.py
+extra_scripts = 
+  pre:release_extra.py
+  pre:room8266_extra.py
 
 [env:room8266-wifi]
 extends = room8266
@@ -108,11 +123,14 @@ lib_deps =
 build_flags = 
 	${room8266.build_flags}
 	-DWIFI_MODE
-extra_scripts = pre:release_extra.py
+extra_scripts = 
+  pre:release_extra.py
+  pre:room8266_extra.py
 
 [rack32]
 platform = espressif32
 board = esp32dev
+platform_packages = platformio/framework-arduinoespressif32@^3.20007.0
 lib_deps = 
 	${env.lib_deps}
 	bodmer/TFT_eSPI
