--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 default_envs = rack32-debug
 
 [firmware]
-name_room8266 = \"OXRS-SHA-StateIO-ESP8266-FW\"
-name_rack32 = \"OXRS-SHA-StateIO-ESP32-FW\"
+name_esp8266 = \"OXRS-SHA-StateIO-ESP8266-FW\"
+name_esp32 = \"OXRS-SHA-StateIO-ESP32-FW\"
 short_name = \"OXRS State IO\"
 maker = \"SuperHouse Automation\"
 github_url = \"https://github.com/SuperHouse/OXRS-SHA-StateIO-ESP32-FW\"
