--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,7 @@
 default_envs = rack32-debug
 
 [firmware]
-name_esp8266 = \"OXRS-SHA-StateIO-ESP8266-FW\"
-name_esp32 = \"OXRS-SHA-StateIO-ESP32-FW\"
+name = \"OXRS-SHA-StateIO-FW\"
 short_name = \"OXRS State IO\"
 maker = \"SuperHouse Automation\"
 github_url = \"https://github.com/SuperHouse/OXRS-SHA-StateIO-ESP32-FW\"
@@ -28,7 +27,7 @@ lib_deps =
 	https://github.com/OXRS-IO/OXRS-IO-API-ESP32-LIB
 	https://github.com/OXRS-IO/OXRS-IO-IOHandler-ESP32-LIB
 build_flags = 
-  ;	-DFW_NAME   set by debug/release_extra.py
+	-DFW_NAME="${firmware.name}"
 	-DFW_SHORT_NAME="${firmware.short_name}"
 	-DFW_MAKER="${firmware.maker}"
 	-DFW_GITHUB_URL="${firmware.github_url}"
@@ -40,8 +39,6 @@ build_flags =
 	${rack32.build_flags}
 	-DFW_VERSION="DEBUG-ETH"
 monitor_speed = 115200
-extra_scripts = 
-  pre:debug_extra.py
 
 [env:rack32-debug-wifi]
 extends = rack32
@@ -56,8 +53,6 @@ build_flags =
 	-DWIFI_MODE
 	-DFW_VERSION="DEBUG-WIFI"
 monitor_speed = 115200
-extra_scripts = 
-  pre:debug_extra.py
 
 [env:room8266-debug]
 extends = room8266
@@ -65,8 +60,6 @@ build_flags =
 	${room8266.build_flags}
 	-DFW_VERSION="DEBUG-ETH"
 monitor_speed = 115200
-extra_scripts = 
-  pre:debug_extra.py
 
 [env:room8266-debug-wifi]
 extends = room8266
@@ -81,17 +74,15 @@ build_flags =
 	-DWIFI_MODE
 	-DFW_VERSION="DEBUG-WIFI"
 monitor_speed = 115200
-extra_scripts = 
-  pre:debug_extra.py
 
 ; release builds
-[env:rack32-eth]
+[env:rack32-eth_ESP32]
 extends = rack32
 extra_scripts = 
   pre:release_extra.py
   pre:rack32_extra.py
 
-[env:rack32-wifi]
+[env:rack32-wifi_ESP32]
 extends = rack32
 lib_deps = 
 	${rack32.lib_deps}
@@ -106,13 +97,13 @@ extra_scripts =
   pre:release_extra.py
   pre:rack32_extra.py
 
-[env:room8266-eth]
+[env:room8266-eth_ESP8266]
 extends = room8266
 extra_scripts = 
   pre:release_extra.py
   pre:room8266_extra.py
 
-[env:room8266-wifi]
+[env:room8266-wifi_ESP8266]
 extends = room8266
 lib_deps = 
 	${room8266.lib_deps}
