--- a/platformio.ini
+++ b/platformio.ini
@@ -79,8 +79,8 @@ monitor_speed = 115200
 [env:rack32-eth_ESP32]
 extends = rack32
 extra_scripts = 
-  pre:release_extra.py
-  pre:rack32_extra.py
+  pre:scripts/release_extra.py
+  pre:scripts/rack32_extra.py
 
 [env:rack32-wifi_ESP32]
 extends = rack32
@@ -94,14 +94,14 @@ build_flags =
 	${rack32.build_flags}
 	-DWIFI_MODE
 extra_scripts = 
-  pre:release_extra.py
-  pre:rack32_extra.py
+  pre:scripts/release_extra.py
+  pre:scripts/rack32_extra.py
 
 [env:room8266-eth_ESP8266]
 extends = room8266
 extra_scripts = 
-  pre:release_extra.py
-  pre:room8266_extra.py
+  pre:scripts/release_extra.py
+  pre:scripts/room8266_extra.py
 
 [env:room8266-wifi_ESP8266]
 extends = room8266
@@ -115,8 +115,8 @@ build_flags =
 	${room8266.build_flags}
 	-DWIFI_MODE
 extra_scripts = 
-  pre:release_extra.py
-  pre:room8266_extra.py
+  pre:scripts/release_extra.py
+  pre:scripts/room8266_extra.py
 
 [rack32]
 platform = espressif32
