rename to OXRS-IO-StateIO-ESP-FW

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 default_envs = rack32-debug
 
 [firmware]
-name = \"OXRS-SHA-StateIO-FW\"
+name = \"OXRS-IO-StateIO-FW\"
 short_name = \"OXRS State IO\"
-maker = \"SuperHouse Automation\"
-github_url = \"https://github.com/SuperHouse/OXRS-SHA-StateIO-ESP32-FW\"
+maker = \"OXRS Core Team\"
+github_url = \"https://github.com/OXRS-IO/OXRS-IO-StateIO-ESP-FW\"
 
 [env]
 framework = arduino
